--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
              <div class="searchBar">
               <img src="css/assets/Mask Group 39.svg" alt="search-bar"/>
               <input aria-label="Search" name="query"  type="search" placeholder="Search" > 
-              <div jscontroller="J5Ptqf" class="clear-button XoaYSb" jsname="RP0xob" aria-label="Clear" role="button" jsaction="AVsnlb;rcuQ6b:npT2md" data-ved="0ahUKEwiLpMef9p_sAhWf63MBHdF0AYoQ05YFCAs"> <span class="lBbtTb z1asCe rzyADb" jsname="itVqKe" tabindex="0" aria-label="Clear"><svg focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"></path></svg></span> <span class="FqnKTc"></span> </div>         
+              <div class="clear-button XoaYSb" jsname="RP0xob" aria-label="Clear" role="button"> <span class="lBbtTb z1asCe rzyADb" jsname="itVqKe" tabindex="0" aria-label="Clear"><svg focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"></path></svg></span> <span class="FqnKTc"></span> </div>         
             </div>
           </header>
         
